[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/png/fireball/tile032.png" type="Texture" id=1]
[ext_resource path="res://scripts/boomerang.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.8678, 6.03828 )

[node name="boomerang" type="Area2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.47, -7.62939e-06 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_boomerang_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
